--- a/research/03_model_trainer.ipynb
+++ b/research/03_model_trainer.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-End-Chest-Cancer-Classification-using-MLflow-DVC\\\\research'"
+       "'/Users/mahikhan/Documents/MLOps_E2E/E2EDL_CICD_mlflow/E2E_DL_Mlflow_DVC_DagusHub_AWS/research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-End-Chest-Cancer-Classification-using-MLflow-DVC'"
+       "'/Users/mahikhan/Documents/MLOps_E2E/E2EDL_CICD_mlflow/E2E_DL_Mlflow_DVC_DagusHub_AWS'"
       ]
      },
      "execution_count": 4,
@@ -77,7 +77,8 @@
     "    params_epochs: int\n",
     "    params_batch_size: int\n",
     "    params_is_augmentation: bool\n",
-    "    params_image_size: list"
+    "    params_image_size: list\n",
+    "    params_learning_rate: float"
    ]
   },
   {
@@ -88,7 +89,8 @@
    "source": [
     "from cnnClassifier.constants import *\n",
     "from cnnClassifier.utils.common import read_yaml, create_directories\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "tf.config.run_functions_eagerly(True)\n"
    ]
   },
   {
@@ -127,7 +129,8 @@
     "            params_epochs=params.EPOCHS,\n",
     "            params_batch_size=params.BATCH_SIZE,\n",
     "            params_is_augmentation=params.AUGMENTATION,\n",
-    "            params_image_size=params.IMAGE_SIZE\n",
+    "            params_image_size=params.IMAGE_SIZE,\n",
+    "            params_learning_rate=params.LEARNING_RATE\n",
     "        )\n",
     "\n",
     "        return training_config"
@@ -142,13 +145,13 @@
     "import os\n",
     "import urllib.request as request\n",
     "from zipfile import ZipFile\n",
-    "import tensorflow as tf\n",
+    "#import tensorflow as tf\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,16 +159,21 @@
     "    def __init__(self, config: TrainingConfig):\n",
     "        self.config = config\n",
     "\n",
-    "    \n",
     "    def get_base_model(self):\n",
     "        self.model = tf.keras.models.load_model(\n",
     "            self.config.updated_base_model_path\n",
     "        )\n",
     "\n",
-    "    def train_valid_generator(self):\n",
+    "        # ✅ Re-compile the model to avoid optimizer variable mismatch\n",
+    "        self.model.compile(\n",
+    "            optimizer=tf.keras.optimizers.Adam(learning_rate=self.config.params_learning_rate),\n",
+    "            loss=tf.keras.losses.CategoricalCrossentropy(),\n",
+    "            metrics=[\"accuracy\"]\n",
+    "        )\n",
     "\n",
+    "    def train_valid_generator(self):\n",
     "        datagenerator_kwargs = dict(\n",
-    "            rescale = 1./255,\n",
+    "            rescale=1. / 255,\n",
     "            validation_split=0.20\n",
     "        )\n",
     "\n",
@@ -206,14 +214,10 @@
     "            **dataflow_kwargs\n",
     "        )\n",
     "\n",
-    "    \n",
     "    @staticmethod\n",
     "    def save_model(path: Path, model: tf.keras.Model):\n",
     "        model.save(path)\n",
     "\n",
-    "\n",
-    "\n",
-    "    \n",
     "    def train(self):\n",
     "        self.steps_per_epoch = self.train_generator.samples // self.train_generator.batch_size\n",
     "        self.validation_steps = self.valid_generator.samples // self.valid_generator.batch_size\n",
@@ -229,34 +233,36 @@
     "        self.save_model(\n",
     "            path=self.config.trained_model_path,\n",
     "            model=self.model\n",
-    "        )\n",
-    "\n"
+    "        )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-11-19 10:05:04,593: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-11-19 10:05:04,603: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-11-19 10:05:04,605: INFO: common: created directory at: artifacts]\n",
-      "[2023-11-19 10:05:04,606: INFO: common: created directory at: artifacts\\training]\n",
-      "Found 68 images belonging to 2 classes.\n",
-      "Found 275 images belonging to 2 classes.\n",
-      "17/17 [==============================] - 31s 2s/step - loss: 14.9583 - accuracy: 0.5097 - val_loss: 17.5577 - val_accuracy: 0.6094\n"
+      "[2025-07-15 10:17:22,008: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2025-07-15 10:17:22,010: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-07-15 10:17:22,011: INFO: common: created directory at: artifacts]\n",
+      "[2025-07-15 10:17:22,011: INFO: common: created directory at: artifacts/training]\n",
+      "[2025-07-15 10:17:22,089: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Softwares\\anaconda3\\envs\\chest\\lib\\site-packages\\keras\\src\\engine\\training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
-      "  saving_api.save_model(\n"
+     "ename": "AttributeError",
+     "evalue": "'TrainingConfig' object has no attribute 'params_learning_rate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m     training\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m---> 10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
+      "Cell \u001b[0;32mIn[12], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m training_config \u001b[38;5;241m=\u001b[39m config\u001b[38;5;241m.\u001b[39mget_training_config()\n\u001b[1;32m      4\u001b[0m training \u001b[38;5;241m=\u001b[39m Training(config\u001b[38;5;241m=\u001b[39mtraining_config)\n\u001b[0;32m----> 5\u001b[0m \u001b[43mtraining\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_base_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m training\u001b[38;5;241m.\u001b[39mtrain_valid_generator()\n\u001b[1;32m      7\u001b[0m training\u001b[38;5;241m.\u001b[39mtrain()\n",
+      "Cell \u001b[0;32mIn[11], line 12\u001b[0m, in \u001b[0;36mTraining.get_base_model\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mmodels\u001b[38;5;241m.\u001b[39mload_model(\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mupdated_base_model_path\n\u001b[1;32m      8\u001b[0m )\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# ✅ Re-compile the model to avoid optimizer variable mismatch\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mcompile(\n\u001b[0;32m---> 12\u001b[0m     optimizer\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39moptimizers\u001b[38;5;241m.\u001b[39mAdam(learning_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparams_learning_rate\u001b[49m),\n\u001b[1;32m     13\u001b[0m     loss\u001b[38;5;241m=\u001b[39mtf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39mlosses\u001b[38;5;241m.\u001b[39mCategoricalCrossentropy(),\n\u001b[1;32m     14\u001b[0m     metrics\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     15\u001b[0m )\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'TrainingConfig' object has no attribute 'params_learning_rate'"
      ]
     }
    ],
@@ -297,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
